namespace Ofta.Domain.UserAgg;

public interface IUserKey
{
    string UserEmail { get; }
}