namespace Ofta.Domain.DocContext.DocAgg;

public enum DocStateEnum
{
    Created,
    Submited,
    Uploaded,
    Signed,
    Published,
    Expired,
    Rejected
}