namespace Ofta.Domain.DocContext.DocTypeAgg;

public interface IDocTypeKey
{
    string DocTypeId { get; }
}